# ChangeLog for app-benchmarks/i7z
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-benchmarks/i7z/ChangeLog,v 1.14 2012/09/12 06:24:13 jlec Exp $

*i7z-0.27.2 (12 Sep 2012)

  12 Sep 2012; Justin Lecher <jlec@gentoo.org> -files/0.26-gcc46.patch,
  -files/i7z-0.27-cpuid.patch, -files/0.26-gentoo.patch, +i7z-0.27.2.ebuild,
  -files/0.27-gentoo.patch:
  Version Bump, drop old patches

  08 Jun 2012; Justin Lecher <jlec@gentoo.org> -i7z-0.27-r1.ebuild:
  Cleaned old

  08 Jun 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> i7z-0.27.1.ebuild:
  x86 stable wrt bug #418513

  04 Jun 2012; Agostino Sarubbo <ago@gentoo.org> i7z-0.27.1.ebuild:
  Stable for amd64, wrt bug #418513

  25 Mar 2012; Justin Lecher <jlec@gentoo.org> -i7z-0.26.ebuild,
  -i7z-0.27.ebuild:
  Dropped old

  24 Mar 2012; Markos Chandras <hwoarang@gentoo.org> i7z-0.27-r1.ebuild:
  Stable on amd64 wrt bug #407787

  24 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> i7z-0.27-r1.ebuild:
  x86 stable wrt bug #407787

  13 Mar 2012; Justin Lecher <jlec@gentoo.org> i7z-0.27-r1.ebuild:
  backport upstream addition to CXXFLAGS, #407881

*i7z-0.27.1 (28 Dec 2011)

  28 Dec 2011; Justin Lecher <jlec@gentoo.org> +i7z-0.27.1.ebuild,
  +files/i7z-0.27.1-gentoo.patch:
  Version Bump

*i7z-0.27-r1 (31 Aug 2011)

  31 Aug 2011; Mike Frysinger <vapier@gentoo.org> +i7z-0.27-r1.ebuild,
  +files/i7z-0.27-cpuid.patch:
  Fix multiple issues with cpuid().

*i7z-0.27 (14 Aug 2011)

  14 Aug 2011; Justin Lecher <jlec@gentoo.org> +files/0.27-gentoo.patch,
  i7z-0.26.ebuild, +i7z-0.27.ebuild, metadata.xml:
  Version Bump

  27 Apr 2011; Justin Lecher <jlec@gentoo.org> +files/0.26-gcc46.patch,
  i7z-0.26.ebuild:
  Fix for gcc46

  08 Feb 2011; Justin Lecher <jlec@gentoo.org> i7z-0.26.ebuild:
  Do not install outside EPREFIX

*i7z-0.26 (29 Jan 2011)

  29 Jan 2011; Justin Lecher <jlec@gentoo.org> +files/0.26-gentoo.patch,
  +i7z-0.26.ebuild, +metadata.xml: