@@ -5,14 +5,13 @@ AUX i7z-0.27.1-gentoo.patch 1506 SHA256 a9fbdf7551a9122f9b333c64ebb1a9290f877988
 DIST i7z-0.27.1.tar.gz 197875 SHA256 862d281fdd5924709056b6c71110f89c7ea1696b6f786bb55a04df8a83cf7758 SHA512 515c239a875ad282563b0b2d735243daaa39c9ef9f2d8c8663a2616ad28c56f0d71a4e1d99bdf88e9250b8090f0f4726ff272b0c6e1265991c86e100d26eb362 WHIRLPOOL 32ff5457a66f11a201da8c652eb5ff8365543511e1a94b349737c5f67cda3c0fa6045f45b7cbf6588657dc9ace05b099c8f40fe6cd5f6c873799ca4443234c5c
 DIST i7z-0.27.2.tar.gz 51226 SHA256 a7f72d65732c17eef0df4f284927fe744fc650075f2364c51c9497534d8f47f1 SHA512 d693fda4d12bf7b0d8e694d9f97876fcd2cad4556c950b4eab09ae21d121e63e221e1e1b27bcf23a241fd868b09165639ecfafeaa126144ad809199fcaca1cbb WHIRLPOOL aaea6bc544a554703cd85f7e2e075588114a6c807e1311421300464f1468560423e987f1582b5e58a2fd48eb1753559958ea39ed9ab97e621718e7f46e8c476e
 EBUILD i7z-0.27.1.ebuild 998 SHA256 53273818e137867399a7604c4b2e7d498e543807f4d74cfd58c318f65bb17e7d SHA512 687ec6d88b0a51f80aa4a8eef1d63a9af14dc66ad43f632bdfc300bf5b0d70aeaf068a2d30338557217e9292ed0c044772eae07522ef687337a72b206a2a9c2d WHIRLPOOL 8def06569f4088c0ee10f781ec820086460beb598261be61c90ba7307778de876c5877f23f97d53fc620ac7b1207d326bfa96b09c1f40d44482f97ef0a7f9bfb
-EBUILD i7z-0.27.2.ebuild 873 SHA256 15afc868ebf66952b1afebaa002ac07d11a66f69516084deb1a3c692346b6725 SHA512 d36aa9da2c6f0e63d128a6b9fa7b1ef19838302c8eefeaca5636368602a50a5c9b510621009bd5c4f7cfb77c9c4375bbcdcb32de0732953bd4589e50fa71af3a WHIRLPOOL 3d95855278ea2a8294a959376296a174bf5889d3f91f27f0b2f865287772331fdff18ad681ab7629110e623ad6575501513b57042565e2582010fc227a54dcf0
-MISC ChangeLog 2029 SHA256 fc08fb2b6cddf38eb9f95a60e42b876af398e6160593a8a26fc9c8b9661f930f SHA512 30917e8045b590103909c26836b848aa9422d7a71391165e3682861485355f7e10497ff84435fade40ba08160d8a1639cd414515216b85ebb142246027cc1909 WHIRLPOOL d7ce50f77acb7d54a229f047c0b3b7d265bb796f3818e752d90d1924635c89d255f765e203c2ac761c0b45acdc3856a3a6ad76d5c3d2cdb9cc6f076deadc1d97
+EBUILD i7z-0.27.2.ebuild 844 SHA256 caf393f1ff94374f92d18832ed9003897003204580dd48c277fe25c8923bc573 SHA512 00378353fdf29344eec14bacc6f43019c3edbcd576a13a45b3c7aa5a943fdeb65a0a5751269846305b40a1bcf562b34e5e82249622b79f8c9b551c9840cd051f WHIRLPOOL b7ef20cb7f8a0937bca42f50ed2013ca5da43f9587c8dd37379bc75f8c0ee231daeb90e5560640b084cee4c1294d870ea8793fcbe47382a11e1213c10d379469
+MISC ChangeLog 2172 SHA256 fa2d79e0752649737069f694f33482cd2de98c84a5be09ef13f1846ae69e4e6b SHA512 a30fb025975a52835342dc920745a6da12ceb637ae644b182ffc03d2207d07974012cda6b6fb5bb63b224d3f64e096fc64612c4ceb37fc3cadf261f2e9914d07 WHIRLPOOL cce0964a7cdaced05e7d57a7f03f937fbb82d55b54d85245fb8af388cc662a8fa6bb28937c9d834619b11fab395a5f3c7eaa00d1c55c40bc7b6e78728c251760
 MISC metadata.xml 274 SHA256 99db8dacd71438ce8b9e6e2fce529fb4558d62e7fb34c6ee9f00705278d896d6 SHA512 e0e1052bc07e355daba76e2fb773d1c98618a2cd3bc1617299ffddbef5764640999a6752e11a9ba162e471c1ff8c4a779da9a53dd5a1ddce6ed1cc242875c3e9 WHIRLPOOL 0da25710f5676efd0793cb0b8e901abc24bf8295fe009e2e739aef7a3652b129f941f9981dc13fe41fc407a8a7cb8a036572e71b9420f1cbe78937b02b0dba58
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
-Comment: GPGTools - http://gpgtools.org
 
-iEYEAREIAAYFAlBQKpIACgkQgAnW8HDreRYChgCgh179FpfHBj9yZ3pld4D+aLRM
-w2IAoLgtYDBntaW/3VrudzhWMf21/I8t
-=GoVU
+iEYEAREIAAYFAlCQzWsACgkQgAnW8HDreRYfnwCg0nYpEkzCWMArBm3jA/Uw3l7q
+OfMAnAlC++1DKg9Vc2HSYCfRxSEcd5sn
+=784b
 -----END PGP SIGNATURE-----
